fixed z-index bug: profile dropdown middle link was not clickable on specific pages

--- a/frontend/static/src/components/Header/Header.css
+++ b/frontend/static/src/components/Header/Header.css
@@ -80,6 +80,7 @@
     border: 1px solid green;
     padding: 0.5rem;
     border-radius: 5px;
+    z-index: 3;
 
 }
     
